StitchIt Change Log

17/10/16
- MAJOR: stitching-related parameters (including average images) are now stored in a separate location 
         to the raw data. So data sets processed prior to this date will need preprocessing again. 
         Suggest you first delete existing average images, as they take up a lot of space. 
- Bugfix to cope with a situation where the user starts acquiring data from an extra channel mid-way
  through the acquisition. 

17/10/10
- MAJOR: coefficients needed to stitch images (with the exception of the tileIndex) are now kept 
         in rawData/stitchitPreProcessingFiles/. You will need to update your INI file by copying
         the relevant bit from the default INI file.


17/10/06
- MAJOR: Offset subtraction is now set via the INI file. You will see warnings on screen until you add 
         this setting to your INI file.
- Improvements in the way the offset correction is performed.
- Remove calcAverageBinFiles since we now only calculate the newer .mat files


17/09/21
- MAJOR: Enable offset correction in bakingtray.tileLoad. This seems necessary for Femto amps as they drift. 


17/09/21
- Bugfix to illumination corrector: error was generated if average file could not be found. 


17/07/13
- Average tiles saved as a structure.
- syncAndCrunch works with BakingTray where sections are saved directly to a "rawData" directory.
- Remove "averageSlowRows" option from INI file. 
- Ability to stitch and average rectangular frames from BakingTray. 


17/05/11
 - Improve docs and bug fix in stitchAllChannels.

17/05/04: 
 - MAJOR: take away the option to remove channel 3 in syncAndCrunch
 - BakingTray: moved to ScanImage multi-channels TIFFs. No longer reads split channels.
 - Fix regression that was causing average image correction to fail with BT data
 - Peeksection now stitches the first available channel by default. Not channel 2. 
 - DEVELOPER NOTE: meta-data format is now documented (help readMetaData2Stitchit)